crates/plotnik-lib/tests/02-parser/trivia/comment_only.txt
// just a comment
------------------ DIAGNOSTICS -------------------
error: query defines nothing
 --> query.ptk:1:1
  |
1 | // just a comment
  | ^^^^^^^^^^^^^^^^^
  |
help: add a definition, e.g. `Q = (identifier) @id`
